kustomize/base/apps/generic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  name: my-application
  namespace: generic
spec:
  ingressClassName: traefik
  rules:
    - host: ""
      http:
        paths:
          - backend:
              service:
                name: my-application
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ""
      secretName: my-application-tls
